Replace _mm_loadu_si64 with _mm_loadl_epi64

Fix a compilation error with GCC 8.3.0. _mm_loadu_si64 was added to GCC
in GCC 9.0: https://gcc.gnu.org/bugzilla/show_bug.cgi?id=78782

Change-Id: I19b7220526ef85bb4450ffaf3dc78573962d9db4